# drug_combo_deg_pred

./: .gitignore  README.md  drug_combo_project_plan.md  pyproject.toml
configs/: model_config.yaml  training_config.yaml
conquest_project/: README.md  pyproject.toml
conquest_project/data/: compound_names.csv  compound_scores.csv
conquest_project/drug_discovery/: const.py  main.py  utils.py
conquest_project/tests/: test_example.py
eda/: 01_exploratory_data_analysis.py  02_baseline_models.py  03_model_experiments.py  __init__.py
scripts/: evaluate.py  predict.py  train.py
src/drug_combo/data/: data_loader.py  preprocessing.py
src/drug_combo/models/: attention_layers.py  autoencoder.py  prediction_model.py
src/drug_combo/training/: evaluation.py  trainer.py
src/drug_combo/utils/: metrics.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_data_preprocessing.py  test_metrics.py  test_models.py  test_training.py
